updated by GasGit automation

--- a/appsscript.json
+++ b/appsscript.json
@@ -11,5 +11,6 @@
     "access": "MYSELF",
     "executeAs": "USER_DEPLOYING"
   },
-  "exceptionLogging": "STACKDRIVER"
+  "exceptionLogging": "STACKDRIVER",
+  "runtimeVersion": "V8"
 }
