updated by GasGit automation

--- a/appsscript.json
+++ b/appsscript.json
@@ -11,6 +11,5 @@
     "access": "MYSELF",
     "executeAs": "USER_DEPLOYING"
   },
-  "exceptionLogging": "STACKDRIVER",
-  "runtimeVersion": "V8"
+  "exceptionLogging": "STACKDRIVER"
 }
